project09/src/main/java/com/example/project09/error/ErrorCode.java
package com.example.project09.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public enum ErrorCode {

    INVALID_PASSWORD(401, "Invalid Password");

    private final int status;
    private final String message;

}
